2012-02-19 Guido Scholz <guido.scholz@bayernline.de>
	* src/aboutdialog.*, src/mainwindow.cpp, src/modularsynth.*: Add
	new about dialog.
	* src/modularsynth.cpp, src/module.*, src/port.*: Fix update of
	jack and cable color if modified by context menu.

2012-02-18 Guido Scholz <guido.scholz@bayernline.de>
	* demos/analog_memory_1.ams, demos/bitgrinder_1.ams,
	demos/hysteresis_1.ams, demos/vcdelay_1.ams: Add demo files for
	new modules, provided by Bill Yerazunis.
	* src/mainwindow.cpp: Restructure module menu.

2012-02-17 Guido Scholz <guido.scholz@bayernline.de>
	* src/modularsynth.cpp: Cleanup string constant handling.

2012-02-16 Guido Scholz <guido.scholz@bayernline.de>
	* src/midicontrollable.*, src/midiwidget.cpp: Use name with or
	 without keyboard shortcut control character for MIDI controller.
	* src/midicheckbox.cpp: Use self contained text for labeling.

2012-02-14 Guido Scholz <guido.scholz@bayernline.de>
	* src/module.h, src/m_vocoder.h, src/m_vocoder.cpp,
	src/modularsynth.*: Add FFT vocoder module, provided by
	Bill Yerazunis.
	* src/m_noise2.*: Add pulsetrain noise type, patch provided by
	Bill Yerazunis.

2012-02-13 Guido Scholz <guido.scholz@bayernline.de>
	* src/module.h, src/m_analogmemory.h, src/m_analogmemory.cpp,
	src/bitgrind.h, src/m_bitgrind.cpp, src/m_hysteresis.cpp,
	src/m_hysteresis.h, src/m_vcdelay.h, src/m_vcdelay.cpp: Add
	analog memory, bit grinder, hysteresis and VC delay modules
	provided by Bill Yerazunis.

2012-02-12 Guido Scholz <guido.scholz@bayernline.de>
	* src/translations/ams_fr.ts:
	Update French translation, provided by Frank Kober.

2012-02-11 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp, src/synthdata.*, modularsynth.*, src/msoptions.h:
	Add support for separate ALSA capture and playback devices.

2012-02-10 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp: Add new menu item to open demo patch files
	directly.

2012-02-09 Guido Scholz <guido.scholz@bayernline.de>