@@ -1,3 +1,8 @@
+2012-02-20 Guido Scholz <guido.scholz@bayernline.de>
+	* src/main.cpp, src/msoptions.h: Rename commandline options
+	"-d" (ALSA device), "-p" (Period size) and "-n" (Number of
+	fragments).
+
 2012-02-19 Guido Scholz <guido.scholz@bayernline.de>
 	* src/aboutdialog.*, src/mainwindow.cpp, src/modularsynth.*: Add
 	new about dialog.
